examples/tests/semantic/fail/incompatibleDeclaration.tig
let 
    var wrong : int := "hello"
in 
end